force-app/main/default/objects/Contract/fields/ContractNumber__c.field-meta.xml
<CustomField>
    <fullName>ContractNumber__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Number</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Contracts (Quote)</relationshipLabel>
    <relationshipName>Contracts2</relationshipName>
    <type>Lookup</type>
</CustomField>