force-app/main/default/objects/Contract/fields/Latest_Amendment_Created__c.field-meta.xml
<CustomField>
    <fullName>Latest_Amendment_Created__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Latest Amendment Created</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Contracts (Quote)</relationshipLabel>
    <relationshipName>Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>