force-app/main/default/objects/Contract/fields/MD_ContractStatus__c.field-meta.xml
<CustomField>
    <fullName>MD_ContractStatus__c</fullName>
    <description>Used by Mosaic Direct Portal in Contract Report to indicate the status based on CLI&apos;s according to the report rules.</description>
    <label>MD Contract Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MD_ContractStatus</valueSetName>
    </valueSet>
</CustomField>