force-app/main/default/objects/Contract/fields/PMC_CLM_AmendmentNumber__c.field-meta.xml
<CustomField>
    <fullName>PMC_CLM_AmendmentNumber__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field will store the numerical value representing the number of times this contract has been amended</description>
    <label>Amendment Number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>