force-app/main/default/objects/Contract/fields/PMC_CLM_ContractReferenceNumber__c.field-meta.xml
<CustomField>
    <fullName>PMC_CLM_ContractReferenceNumber__c</fullName>
    <formula>TRIM(SUBSTITUTE( SBQQ__Quote__r.Name ,&quot;Q-&quot;,&quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Reference Number</label>
    <type>Text</type>
</CustomField>