force-app/main/default/objects/Contract/fields/PMC_CPQ_AmendButtonVisibleNA__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_AmendButtonVisibleNA__c</fullName>
    <formula>AND(
    ISPICKVAL(SBQQ__Quote__r.PMC_CPQ_Region__c, &apos;North America&apos;),
   
    TODAY() &lt; EndDate + 7

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PMC_CPQ_AmendButtonVisibleNA</label>
    <type>Checkbox</type>
</CustomField>