force-app/main/default/objects/Contract/fields/PMC_CPQ_BillingBlock__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_BillingBlock__c</fullName>
    <label>Billing Block</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>Customer Master Block</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>Prices Incomplete</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>Check credit memo</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>Check Debit Memo</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>Waiting for Payment</label>
            </value>
            <value>
                <fullName>06</fullName>
                <label>Awaiting Chem. Analy</label>
            </value>
            <value>
                <fullName>07</fullName>
                <label>Block Output</label>
            </value>
            <value>
                <fullName>08</fullName>
                <label>Agrosoft Bil. Block</label>
            </value>
            <value>
                <fullName>09</fullName>
                <label>Final Price Pending</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>CROP Term Block</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Cancel Sub Analisis.</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>