force-app/main/default/objects/Contract/fields/PMC_CPQ_BillToAccount__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_BillToAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will take only Accounts that are of type Bill To.</description>
    <label>Bill To Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>