force-app/main/default/objects/Contract/fields/PMC_CPQ_Contract_Blocked__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Contract_Blocked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If new contract created by Block/Replace Button then this field will be checked</description>
    <label>Contract Blocked</label>
    <type>Checkbox</type>
</CustomField>