force-app/main/default/objects/Contract/fields/PMC_CPQ_ContractNumberIdentifier__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ContractNumberIdentifier__c</fullName>
    <description>This field will store the contract number(AutoNumber) which will be used as an External Id for 066I.</description>
    <externalId>true</externalId>
    <label>Contract Number Identifier</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>