force-app/main/default/objects/Contract/fields/PMC_CPQ_ContractShippingInstructions__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ContractShippingInstructions__c</fullName>
    <description>Shipping Instructions</description>
    <label>Shipping Instructions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>