force-app/main/default/objects/Contract/fields/PMC_CPQ_ContractType__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ContractType__c</fullName>
    <description>This field will be used to indicate the Contract Type wrt to the Mode to Transportation (Rail, Truck, Barge) and FPD/Priced/CCC</description>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Priced Contract Barge</fullName>
            </value>
            <value>
                <fullName>Priced Contract Truck</fullName>
            </value>
            <value>
                <fullName>Priced Contract Rail</fullName>
            </value>
            <value>
                <fullName>FPD Contract Barge</fullName>
            </value>
            <value>
                <fullName>FPD Contract Rail</fullName>
            </value>
            <value>
                <fullName>FPD Contract Truck</fullName>
            </value>
            <value>
                <fullName>CCC Contract Truck</fullName>
            </value>
            <value>
                <fullName>Third Party Delivery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>