force-app/main/default/objects/Contract/fields/PMC_CPQ_DeliveryBlock__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_DeliveryBlock__c</fullName>
    <label>Delivery Block</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>Missing Credit Limit</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>Political Reasons</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>Change in quantity</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>Commercial condition</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>Margin Dollar Exceed</label>
            </value>
            <value>
                <fullName>06</fullName>
                <label>Last pay date passed</label>
            </value>
            <value>
                <fullName>07</fullName>
                <label>Past due delivery</label>
            </value>
            <value>
                <fullName>08</fullName>
                <label>Hold req by customer</label>
            </value>
            <value>
                <fullName>09</fullName>
                <label>Awaiting shipto info</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Under credit review</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Awaiting Prepayment</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>ADM Pending Advance</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>Miscellaneous Reason</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>Partial Payment</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>Final Price Pending</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>O9 Confirmation Blck</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>SFDC Dlv Block</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>FPD Shipment block</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>