force-app/main/default/objects/Contract/fields/PMC_CPQ_FinancialResourceType__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_FinancialResourceType__c</fullName>
    <label>Financial Resource Type</label>
    <length>120</length>
    <type>Text</type>
</CustomField>