force-app/main/default/objects/Contract/fields/PMC_CPQ_FullPaymentDate__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_FullPaymentDate__c</fullName>
    <label>Full Payment Date</label>
    <type>Date</type>
</CustomField>