force-app/main/default/objects/Contract/fields/PMC_CPQ_LatestQuote__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_LatestQuote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Latest Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Contracts (Latest Quote)</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>