force-app/main/default/objects/Contract/fields/PMC_CPQ_LegacyContractID__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_LegacyContractID__c</fullName>
    <label>Legacy Contract ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>