force-app/main/default/objects/Contract/fields/PMC_CPQ_PO__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_PO__c</fullName>
    <label>Customer Purchase Order #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>