force-app/main/default/objects/Contract/fields/PMC_CPQ_PrimaryContact__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_PrimaryContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>