force-app/main/default/objects/Contract/fields/PMC_CPQ_SAPContractNumber__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_SAPContractNumber__c</fullName>
    <externalId>true</externalId>
    <label>SAP Contract Number</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>