force-app/main/default/objects/Contract/fields/PMC_CPQ_SAPContractReference__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_SAPContractReference__c</fullName>
    <formula>SBQQ__Quote__r.PMC_CPQ_SAPContractReference__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SAP Contract Reference</label>
    <type>Text</type>
</CustomField>