force-app/main/default/objects/Contract/fields/PMC_CPQ_Status__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Status__c</fullName>
    <label>Invoice Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>