force-app/main/default/objects/Contract/validationRules/PMC_CLM_ContractRenewalValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>PMC_CLM_ContractRenewalValidation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT($Setup.PMC_ProcessSwitches__c.PMC_BypassValidationRule__c),
$Profile.Name &lt;&gt; &apos;System Administrator&apos;,
$Profile.Name &lt;&gt; &apos;API Only profile&apos;,
SBQQ__RenewalQuoted__c = true,
EndDate - DATEVALUE(NOW())&gt;30

)</errorConditionFormula>
    <errorMessage>Renewal Quote can be created only before 30 or less days from Contract End Date</errorMessage>
</ValidationRule>